# panda-authz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: examples.md  policy-format.md
src/panda_authz/: functions.py  model.conf  service.py
tests/: policy_test.csv  test_enforcer.py  test_service.py  tests.py
