[project]
name = "panda-authz"
dynamic = ["version"]
dependencies = [
  "casbin>=1.36"
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "flake8",
  "mypy",
  "pytest",
  "pre-commit"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
panda_authz = ["*.conf"]

[tool.setuptools.dynamic]
version = {attr = "panda_authz.__version__"}

[tool.semantic_release]
version_variable = "src/panda_authz/__init__.py:__version__"
branch = "main"
upload_to_pypi = false
upload_to_repository = false
build_command = ""
