[project]
name = "panda-authz"
description = "PanDA Authorization Library"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "PanDA Team", email = "panda-support@cern.ch" },
]
dependencies = [
  "casbin>=1.36"
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "flake8",
  "mypy",
  "pytest",
  "pre-commit"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
panda_authz = ["*.conf"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.semantic_release]
version_variables = ["VERSION"]
branch = "main"
commit_version_number = true
upload_to_pypi = false
upload_to_repository = true
build_command = ""
